client/src/pages/HomePage.css
* {
  margin: 0;
}

.home {
  background-color: #FAFAFA;
  height: 100vh;
  margin-top: 6%;
}

.home__header {
  top: 0;
  position: fixed;
  background-color: white;
  border-bottom: 1px solid lightgrey;
  width: 100vw;
  z-index: 2;
  height: 7.2%;
}

.home__navbar {
  display: grid;
  grid-template-columns: 2fr 7fr 0.5fr 0.8fr 1.3fr;
  object-fit: contain;
  padding: 8px;
  max-width: 850px;
  margin: auto;
  margin-top: .1%;
}

.navbar__logo {
  height: 30px;
  width: 150px;
  cursor: pointer;
  opacity: 0.85;
  margin-top: 3%;
}

.navbar__button__home {
  width: 70px;
  margin: 4px 8px;
  cursor: pointer;
  opacity: 0.8;
}

.navbar__button__logout {
  width: 70px;
  margin: 4px 8px;
  cursor: pointer;
  background-color: #0095f6;
  border: none;
  color: white;
  border-radius: 4px;
  font-weight: 700;
  font-size: 90%;
}

.navbar__button__logout:hover {
  opacity: 0.85;
}

